--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!--
     Equipo: Sebastian Vizcarra Salas & Azul Rodriguez Ruiz
-
-    **NOTA**
-    La pagina tiene mucho codigo que no utiliza.
-    No tuve tiempo de optimizar la pagina, estuve modificandola a cada rato.
-    Este es el cuarto prototipo que hago para inteeentaaar excentar, si no fue de las 10 mejores, se intento ;)  
+    2AmPr ISSI
 -->
 <!DOCTYPE html>
 <html>
@@ -65,6 +61,9 @@
                 El objetivo de Vida Estudiantil es proporcionar a los alumnos las herramientas y recursos necesarios para superar sus desafíos académicos y alcanzar el éxito en sus estudios. Nos dedicamos a ofrecer consejos prácticos, técnicas de estudio eficaces y apoyo emocional para que los estudiantes puedan mejorar sus calificaciones, gestionar mejor su tiempo y desarrollar habilidades que les serán útiles a lo largo de su vida académica y profesional. En Vida Estudiantil, nuestra meta es acompañarte en tu camino hacia el éxito educativo, ayudándote a superar obstáculos y a aprovechar al máximo tu potencial. </h2>
         </section>
 
+        <footer>
+            <iframe src="vistas/footer.html" frameborder="0"></iframe>
+        </footer>
     </div>
 </body>
 
